fix wrong font path

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -86,7 +86,7 @@
 
 @font-face {
   font-family: 'JetBrains Mono';
-  src: url('../public/fonts/jetbrains-mono/JetBrainsMono-Extrabold.ttf');
+  src: url('../public/fonts/jetbrains-mono/JetBrainsMono-ExtraBold.ttf');
   font-weight: 800;
   font-style: normal;
 }
